<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="52dp" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginHorizontal="15dp"
                android:animateLayoutChanges="true"
                android:contentDescription="@string/hello_text"
                android:minHeight="100dp">

                <LinearLayout
                    android:id="@+id/SctrollLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/questionTextEdit"
                    android:layout_width="323dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/enter_the_question"
                    android:inputType="textMultiLine"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/buttonSend"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/button"
                    android:backgroundTintMode="src_in"
                    android:contentDescription="@string/send_text"
                    app:cornerRadius="150px"
                    app:icon="@drawable/send"
                    app:strokeColor="#121010"
                    app:strokeWidth="1dp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSignOut"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:text="@string/Sign_Out" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>